--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,8 @@
         "symfony/validator": "6.3.*",
         "symfony/yaml": "6.3.*",
         "twig/extra-bundle": "^2.12|^3.0",
-        "twig/twig": "^2.12|^3.0"
+        "twig/twig": "^2.12|^3.0",
+        "janopl/recommendation-system": "dev-master"
     },
     "config": {
         "allow-plugins": {
@@ -77,5 +78,11 @@
         "symfony/maker-bundle": "^1.51",
         "symfony/phpunit-bridge": "^6.3",
         "symfony/var-dumper": "6.3.*"
-    }
+    },
+    "repositories": [
+        {
+            "type": "git",
+            "url": "git@github.com:JanoPL/recommendation-system.git"
+        }
+    ]
 }
