--- a/compose.yaml
+++ b/compose.yaml
@@ -3,12 +3,13 @@ version: '3'
 services:
 ###> doctrine/doctrine-bundle ###
   database:
-    image: postgres:${POSTGRES_VERSION:-15}-alpine
+    image: mariadb:10.4.31
     environment:
-      POSTGRES_DB: ${POSTGRES_DB:-app}
+      MARIADB_DB: db
       # You should definitely change the password in production
-      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD:-!ChangeMe!}
-      POSTGRES_USER: ${POSTGRES_USER:-app}
+      MARIADB_PASSWORD: db
+      MARIADB_USER: db
+      MARIADB_ROOT_PASSWORD: db
     volumes:
       - database_data:/var/lib/postgresql/data:rw
       # You may use a bind-mounted host directory instead, so that it is harder to accidentally remove the volume and lose all your data!
