--- a/composer.json
+++ b/composer.json
@@ -10,12 +10,16 @@
         "doctrine/doctrine-bundle": "^2.11",
         "doctrine/doctrine-migrations-bundle": "^3.3",
         "doctrine/orm": "^2.17",
+        "google/cloud": "^0.195.0",
         "janopl/recommendation-system": "dev-master",
+        "sensio/framework-extra-bundle": "^6.2",
+        "symfony-bundles/redis-bundle": "^3.1",
         "symfony/console": "6.3.*",
         "symfony/dotenv": "6.3.*",
         "symfony/flex": "^2",
         "symfony/form": "6.3.*",
         "symfony/framework-bundle": "6.3.*",
+        "symfony/monolog-bundle": "^3.10",
         "symfony/runtime": "6.3.*",
         "symfony/security-csrf": "6.3.*",
         "symfony/serializer": "6.3.*",
@@ -88,7 +92,7 @@
     "repositories": [
         {
             "type": "git",
-            "url": "git@github.com:JanoPL/recommendation-system.git"
+            "url": "https://github.com/JanoPL/recommendation-system.git"
         }
     ]
 }
