--- a/.docker/docker-compose.yml
+++ b/.docker/docker-compose.yml
@@ -12,7 +12,7 @@ services:
             MARIADB_USER: db
             MARIADB_ROOT_PASSWORD: db
         ports:
-            - 3306:3306
+            - "3306:3306"
         networks:
             - symfony_app
     php:
@@ -24,20 +24,55 @@ services:
             - ../:/var/www/symfony:cached
         networks:
             - symfony_app
+        command: >
+            sh -c "bin/console doctrine:migrations:migrate && bin/console doctrine:fixtures:load -q && php-fpm"
+        depends_on:
+            - db
+            - nginx
+            - redis
+
     nginx:
         build:
             context: ./nginx
         volumes:
             - ../:/var/www/symfony:cached
         ports:
-            - 80:80
+            - "80:80"
         networks:
             - symfony_app
         env_file:
             - .env.nginx
 
+    redis:
+        image: redis:7
+        ports:
+            - "6379:6379"
+        volumes:
+            - redis_app:/root/redis
+        environment:
+            - REDIS_PASSWORD=test
+            - REDIS_PORT=6379
+            - REDIS_DATABASE=0
+        networks:
+            - symfony_app
+
+    redis-commander:
+        container_name: redis-commander
+        hostname: redis-commander
+        image: ghcr.io/joeferner/redis-commander:latest
+        restart: always
+        environment:
+            - REDIS_HOSTS=docker:redis:6379:0:test
+        ports:
+            - "8081:8081"
+        networks:
+            - symfony_app
+        depends_on:
+            - redis
+
 volumes:
     db_app:
+    redis_app:
 
 networks:
     symfony_app:
