--- a/.ddev/config.yaml
+++ b/.ddev/config.yaml
@@ -1,9 +1,9 @@
 name: moviese
 type: php
 docroot: public
-php_version: "8.2"
+php_version: "8.3"
 webserver_type: nginx-fpm
-xdebug_enabled: true
+xdebug_enabled: false
 additional_hostnames: []
 additional_fqdns: []
 database:
