--- a/.docker/docker-compose.yml
+++ b/.docker/docker-compose.yml
@@ -50,7 +50,8 @@ services:
         volumes:
             - redis_app:/root/redis
         environment:
-            - REDIS_PASSWORD=test
+            - REDIS_USERNAME=redis
+            - REDIS_PASSWORD=redis
             - REDIS_PORT=6379
             - REDIS_DATABASE=0
         networks:
@@ -62,7 +63,7 @@ services:
         image: ghcr.io/joeferner/redis-commander:latest
         restart: always
         environment:
-            - REDIS_HOSTS=docker:redis:6379:0:test
+            - REDIS_HOSTS=docker:redis:6379:0:redis:redis
         ports:
             - "8081:8081"
         networks:
