--- a/config/packages/cache.yaml
+++ b/config/packages/cache.yaml
@@ -10,7 +10,7 @@ framework:
         # Redis
         app: cache.adapter.redis
         system: cache.adapter.redis
-        default_redis_provider: redis://redis
+        default_redis_provider: redis://redis:redis@redis:6379
 
         # APCu (not recommended with heavy random-write workloads as memory fragmentation can cause perf issues)
         #app: cache.adapter.apcu
